--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 	<h1>sourceTree Git</h1>
+	<p>1. add repository</p>
+	<p>2. commit - check to staged files/ commit to branches</p>
 </body>
 </html>
