--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 	<h1>sourceTree Git</h1>
-	<p>1. add repository</p>
+	<ul>
+		<li>1. add repository</li>
+	</ul>
 	<p>2. commit - check to staged files/ commit to branches</p>
+	<h2>reset</h2>
+	<p>하나의 버전에는 여러개의 변경사항이 포함된다.</p>
+	<h2>discard</h2>
+	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
+	
 </body>
-</html>
+</html>	
