--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<p>하나의 버전에는 여러개의 변경사항이 포함된다.</p>
 	<h2>discard</h2>
 	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
-	
+
+	<p>sample change </p>
+	<p>smaple changes 2</p>
+
 </body>
 </html>	
