--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<h2>reset</h2>
 	<p>하나의 버전에는 여러개의 변경사항이 포함된다.</p>
 	<h2>discard</h2>
-	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
-	
+	<h2>reset current branch to this commit </h2>
+	<p>Hard - discard all working copy changes</p>
+	<p>soft, Mixed</p>	
 </body>
 </html>	
