--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<h2>discard</h2>
 	<h2>reset current branch to this commit </h2>
 	<p>Hard - discard all working copy changes</p>
-	<p>soft, Mixed</p>	
+	<p>soft, Mixed</p>
+
+	<h3>branches 생성 예제</h3>	
 </body>
 </html>	
