--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<h2>branches 생성 예제</h2>	
 	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
 
+	<p>add branches</p>
+
 	<p>source from : opentutorials.org</p>
 	
 </body>
