--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p>soft, Mixed</p>
 	<h2>branches 생성 예제</h2>	
 	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
-	<h3> conflict branches</h3>
+	<h3> conflict branches test</h3>
 
 	<p>add branches</p>
 
