--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 	<p>soft, Mixed</p>
 	<h2>branches 생성 예제</h2>	
 	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
-	
+	<ul>
+		<li>test1</li>
+		<li>test2</li>
+		<li>test3</li>
+	</ul>
+
 	<p>source from : opentutorials.org1</p>
 	
 </body>
