--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 	<p>soft, Mixed</p>
 	<h2>branches 생성 예제</h2>	
 	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
+	<ul>
+		<li>branches1</li>
+		<li>branches2</li>
+		<li>branches3</li>
+		<li>branches4</li>
+		<li>branches5</li>
+	</ul>
 	
 	<p>source from : opentutorials.org1</p>
 	
