--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<li>branches8</li>
 	</ul>
 	<p>source from : opentutorials.org1</p>
-	<p>원격 저장소와 로컬 저장소 연결</p>
+	<p>원격 저장소와 로컬 저장소 연결 git push -f</p>
 	
 </body>
 </html>	
