--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<p>soft, Mixed</p>
 	<h2>branches 생성 예제</h2>	
 	<h2>reset current branch to this commit - Hard - discard all working copy changes</h2>
+	<p>sync with clone</p>
 	<ul>
 		<li>test1</li>
 		<li>test2</li>
