--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<li>branches6</li>
 		<li>branches7</li>
 		<li>branches8</li>
+		<li>conflict by hirumiran</li>
 	</ul>
 	<p>source from : opentutorials.org1</p>
 	<p>원격 저장소와 로컬 저장소 연결 git push -f</p>
